--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,8 @@ jobs:
           flutter-version: '3.35.3'
       - name: Install dependencies
         run: flutter pub get
+      - name: Prepare authorized emails config
+        run: cp lib/config/authorized_emails.sample.dart lib/config/authorized_emails.dart
 
       # Consider passing '--fatal-infos' for slightly stricter analysis.
       - name: Analyze project source
@@ -31,3 +33,25 @@ jobs:
         uses: SonarSource/sonarqube-scan-action@v5
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+  android-release:
+    name: Android Release APK (debug keystore)
+    runs-on: ubuntu-latest
+    needs: sonarqube
+    steps:
+      - uses: actions/checkout@v4
+      - uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.35.3'
+      - name: Install dependencies
+        run: flutter pub get
+      - name: Prepare authorized emails config
+        run: cp lib/config/authorized_emails.sample.dart lib/config/authorized_emails.dart
+      - name: Build release APK (signed with debug keystore)
+        run: flutter build apk --release
+      - name: Upload APK artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-release-apk
+          path: build/app/outputs/flutter-apk/app-release.apk
+          if-no-files-found: error
