--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Internet permission is required for Google Sign-In and other network calls in release builds -->
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:label="flutter_junie"
         android:name="${applicationName}"
