--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   firebase_core: ^3.8.1
   http: ^1.2.2
   url_launcher: ^6.3.1
+  provider: ^6.1.2
+  sqflite: ^2.3.3+1
+  path: ^1.9.0
+  cached_network_image: ^3.4.1
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
