--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   intl: ^0.20.2
   flutter_map: ^6.1.0
   latlong2: ^0.9.1
+  firebase_performance: ^0.10.1+10
 
 dev_dependencies:
   flutter_test:
