--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
         android:label="flutter_junie"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <profileable android:shell="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
